Fix vertical spacing in row and column styles

--- a/src/styles/column.scss
+++ b/src/styles/column.scss
@@ -3,7 +3,6 @@
   margin-left:  24px;
 
   &:first-child {
-    margin-top: 0;
     margin-left: 0;
   }
 }
@@ -35,6 +34,10 @@
       margin-top: 24px;
       margin-left: 0;
     }
+
+    .row--upper-small > &:first-child {
+      margin-top: 0;
+    }
   }
 }
 
@@ -44,6 +47,10 @@
       width: 100%;
       margin-top: 24px;
       margin-left: 0;
+    }
+
+    .row--upper-xsmall > &:first-child {
+      margin-top: 0;
     }
   }
 }
